force-app/main/default/objects/Inventory__c/fields/Drug_Name__c.field-meta.xml
<CustomField>
    <fullName>Drug_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Drug Name</label>
    <referenceTo>Drug__c</referenceTo>
    <relationshipLabel>Inventory</relationshipLabel>
    <relationshipName>Inventory</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>