force-app/main/default/objects/Inventory__c/fields/Inventory_Status__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Status__c</fullName>
    <label>Inventory Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>Low Stock</fullName>
            </value>
            <value>
                <fullName>Out of Stock</fullName>
            </value>
            <value>
                <fullName>Frozen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>