force-app/main/default/objects/Inventory__c/fields/Is_Frozen__c.field-meta.xml
<CustomField>
    <fullName>Is_Frozen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Frozen</label>
    <type>Checkbox</type>
</CustomField>