force-app/main/default/objects/Inventory__c/fields/Patient_MRN__c.field-meta.xml
<CustomField>
    <fullName>Patient_MRN__c</fullName>
    <label>Patient MRN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>