force-app/main/default/objects/Inventory__c/fields/Reorder_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Reorder_Threshold__c</fullName>
    <label>Reorder Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>