force-app/main/default/objects/Inventory__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Quantity_On_Hand__c</columns>
    <columns>Reorder_Threshold__c</columns>
    <columns>Is_Frozen__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>